traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:11: error: ';' expected but 'else' found.
                                       else {setPos(getX(),getY()-1)}
                                       ^TraversalZigZag:20: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalZigZag:23: error: expected start of definition
	override def forward()  {
                 ^TraversalZigZag:26: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalZigZag:29: error: expected start of definition
	override def backward() {
                 ^TraversalZigZag:32: error: Unmatched closing brace '}' ignored here
}
^