traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {def positionFinale():Boolean= {if (getX()==getMondeHauteur()-1&&getY()==getMondeLargeur()-1) {return true}
                                                  else {return false}}
 var a:Int = 0;                   
                    
                    def marche() {while (!positionFinale()) 
                                {ecritMessage(a);a+=1;
                   var b:Int = getMondeLargeur();              
                                 if (getX!=b)
                                 {setPos(getX(),getY()+1);}
                                 else  
                                 {setPos(getX(),getY()+1)}
                                       else {setPos(getX(),getY()-1)}
                                      }
                                 }
                                 }
                                
marche();gauche();ecritMessage(48);}